--- a/src/views/pages/home.hbs
+++ b/src/views/pages/home.hbs
@@ -23,7 +23,7 @@
 </head>
 <body>
     {{!-- add images, start detecting button, musical notes span --}}
-    <img src="https://www.sweetwater.com/sweetcare/media/2024/05/Instrument-Care-Basics-for-Beginners-featured-image.jpg" alt="instrument image">
+    <img src="/Users/nguyenpham/soundscout/src/resources/img" alt="instrument image">
     <div>
         <button>Start Detecting</button>
     </div>
