save my changes before rebase

--- a/src/views/pages/home.hbs
+++ b/src/views/pages/home.hbs
@@ -20,10 +20,10 @@
         to { left: -10%; transform: rotate(360deg); }
         }
     </style>
-</head>
+</head>s
 <body>
     {{!-- add images, start detecting button, musical notes span --}}
-    <img src="/Users/nguyenpham/soundscout/src/resources/img" alt="instrument image">
+    <img src="img/instrument_img.jpeg" alt="instrument image"> 
     <div>
         <button>Start Detecting</button>
     </div>
