Fix Dependencies and create scripts

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -1,5 +1,10 @@
-<!-- TODO: Add the head.hbs partial here -->
-{{>head}}
+<!DOCTYPE html>
+<html>
+{{> head}}
+
+{{> title}}
+
 {{{body}}}
-<!-- TODO: Add the footer.hbs partial here -->
-{{>footer}}
+
+{{> footer}}
+</html>
