--- a/src/views/partials/footer.hbs
+++ b/src/views/partials/footer.hbs
@@ -1,8 +1,13 @@
 <footer class="text-center text-muted w-100 mt-auto fixed-bottom">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
+    
+    <style>
+        p {
+            text-align: center;
+            margin-bottom: 0;
+        }
+    </style>
     <p>
         &copy; Copyright 2025 SoundScout. All Rights Reserved.
     </p>
 </footer>
-</body>
-</html>
