--- a/src/views/pages/home.hbs
+++ b/src/views/pages/home.hbs
@@ -32,7 +32,7 @@
                 <div class="step-block">
                     <div class="step-icon">✅</div>
                     <h3>Know It!</h3>
-                    <p>InstruLens combines visual and audio data for the most accurate ID.</p>
+                    <p>SoundScout combines visual and audio data for the most accurate ID.</p>
                 </div>
             </div>
         </div>
