--- a/src/views/pages/recognition.hbs
+++ b/src/views/pages/recognition.hbs
@@ -8,8 +8,11 @@
     </script>
   </head>
   <body>
-    <div>
-      <video id="video" autoplay></video>
-    </div>
+    <main>
+      <div>
+        <video id="video" autoplay></video>
+      </div>
+    </main>
+    
   </body>
 </html>
