Update files, add some styling, clean/fix up code

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html>
-{{> head}}
+<html lang="en">
+<head>
+    <title>SoundScout - Instrument Recognition</title> 
+    {{> head}}
+</head>
+<body>
+    <header>
+        {{> nav}}
+    </header>
 
-{{> nav}}
+    <main>
+        {{{body}}}
+    </main>
 
-{{{body}}}
-
-{{> footer}}
+    <footer>
+        {{> footer}}
+    </footer>
+</body>    
 </html>
