--- a/src/views/partials/nav.hbs
+++ b/src/views/partials/nav.hbs
@@ -1,9 +1,5 @@
-<header>
-    <nav id="logo">
-        <a href="/home">
-        <img src="/img/soundscout_logo.png" alt="SoundScout Logo">
-        </a>
-    </nav>
-
-
-</header>
+<nav id="logo">
+  <a href="/home">
+    <img src="/img/soundscout_logo.png" alt="SoundScout Logo" />
+  </a>
+</nav>
