--- a/src/resources/css/styles.css
+++ b/src/resources/css/styles.css
@@ -288,7 +288,7 @@ nav img {
 }
 
 nav {
-  margin: none;
+  margin: 0;
   background-color: white;
 }
 
@@ -300,7 +300,7 @@ header {
   top: 0;
   left: 0;
   right: 0;
-
+  background-color: white;
   z-index: 1000;
 }
 
@@ -314,19 +314,29 @@ body {
   background-color: white;
 }
 
-html,
-body {
-  margin-bottom: 0;
-  margin-left: 0;
-  margin-right: 0;
-  padding: 0;
+html {
   height: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+main {
+  margin-top: 75px;
+  flex-grow: 1;
+  position: relative;
 }
 
 /* ============================= */
 /* Footer */
 /* ============================= */
 footer {
+  flex-shrink: 0;
   width: 100%;
   background-color: #333;
   color: #ccc;
@@ -346,9 +356,13 @@ footer p {
   width: 100%;
   height: 100%;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-#recognition-section::before {
+main:has(#recognition-section)::before {
   content: "";
   position: absolute;
   top: 0;
@@ -362,17 +376,10 @@ footer p {
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-
   opacity: 0.5;
 }
 
 /* Center video */
-#recognition-section {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 #video-container {
   display: flex;
   justify-content: center;
