--- a/src/resources/css/styles.css
+++ b/src/resources/css/styles.css
@@ -323,7 +323,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100%;
-  background-color: lightsalmon;
+  background-color: rgb(255, 233, 160);
 }
 
 main {
@@ -382,4 +382,7 @@ main:has(#recognition-section)::before {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 50px;
+  border-color: #000000;
+
 }
